<resources>
    <string name="app_name">ApplicationAbrAndroid</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Войти</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная</string>
    <string name="menu_gallery">Мои бонусы</string>
    <string name="menu_slideshow">Мои карты</string>

    <string name="menu_data">Личные данные</string>
    <string name="txt_about_company">О компании</string>
    <string name="txt_franchise">Франшиза</string>
    <string name="txt_contacts">Контакты</string>
    <string name="txt_abrcloud">abrcloud</string>

    <string name="title_activity_my">MainActivity</string>
    <string name="title_activity_main">com.example.restaurant1.MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="some_phone"> Укажите телефон</string>
    <string name="phone_id">Код подверждения \nотправлен на номер</string>
    <string name="to_come">Войти</string>
    <string name="sms"> SMS код</string>
    <string name="number">+7 (000) 000-00-00</string>
    <string name="code"> Запросить код</string>
    <string name="menu_events">События</string>
    <string name="menu_feedback">Обратная связь</string>
    <string name="menu_rules">Правила накопления</string>
</resources>