<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home">
        </item>

        <item
            android:id="@+id/nav_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_events"
            android:title="@string/menu_events" />

        <item
            android:id="@+id/nav_data"
            android:title="@string/menu_data" />

        <item
            android:id="@+id/nav_feedback"
            android:title="@string/menu_feedback" />

        <item
            android:id="@+id/nav_rules"
            android:title="@string/menu_rules" />

    </group>


</menu>