<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:background="@color/black">


    <TextView
        android:id="@+id/aboutUsTxt"
        style="@style/LightTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/txt_about_company"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/franchiseTxt"
        style="@style/LightTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/txt_franchise"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/contactsTxt"
        style="@style/LightTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/txt_contacts"
        android:textColor="@color/white"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/abrCloudTxt"
        style="@style/LightTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/txt_abrcloud"
        android:textColor="@color/white"
        android:textSize="12sp" />

</LinearLayout>